<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">FullImage</string>
    <string name="pref_size_label">Image size</string>
    <string name="pref_size_key">size</string>
    <string name="pref_site_key">site</string>
    <string name="pref_site_label">Site to search</string>
    <string name="pref_site_default" />
    <string name="title_activity_settings">Search Options</string>
    <string name="pref_color_label">Color</string>
    <string name="pref_color_key">color</string>
    <string name="pref_type_label">Type</string>
    <string name="pref_type_key">type</string>
    <string name="pref_size_default">none</string>
    <string name="pref_color_default">none</string>
    <string name="pref_type_default">none</string>
</resources>
